--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -44,10 +44,10 @@
                 <option value="8">第八世代-伽勒爾地區</option>
             </select>
         </div>
-        <button class="btn btn-primary" onclick="fetchPokemon()">寶可夢全圖鑑列表fetchPokemon()</button>
-        <button class="btn btn-primary appendChild">寶可夢全圖鑑列表appendChild()</button>
-        <button class="btn btn-success addEventListener">寶可夢全圖鑑列表addEventListener()</button>
-        <button class="btn btn-danger reset">重置Reset()</button>
+        <button class="btn btn-primary" onclick="fetchPokemon()">fetch</button>
+        <button class="btn btn-primary appendChild">append</button>
+        <button class="btn btn-success addEventListener">addEvent</button>
+        <button class="btn btn-danger reset">reset</button>
     </div>
     <div class="container-xxl" id="container">
     </div>
