--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -25,7 +25,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1">編號</span>
             </div>
-            <input type="text" class="form-control" placeholder="No. 001 - 898" aria-label="Username"
+            <input type="text" class="form-control" maxlength="3" placeholder="No. 001 - 898" aria-label="Number"
                 aria-describedby="basic-addon1">
         </div>
         <div class="input-group container-xl mb-3">
