--- a/Apple/index.html
+++ b/Apple/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="refresh" content="3;url=https://www.youtube.com/watch?v=JB3INq8n9is" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <title>Hello, world!</title>
+    <title>宇智波騙你</title>
 </head>
 <body>
     <img src="./img/fake.png" alt="">
