--- a/PrimaryNum/index.html
+++ b/PrimaryNum/index.html
@@ -9,11 +9,10 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Hello, Calculator!</title>
     <style>
-        body {
-            background: black;
-        }
+
 
         .container-md {
+            background: black;
             width: 414px !important;
         }
 
@@ -25,28 +24,44 @@
             margin-bottom: 10px;
         }
 
+        .tipDisplay{
+            margin-top: 20px;
+            color: #ddd;
+        }
+
         button {
             text-align: center;
         }
 
-        .btn.num_btn {
+        .btn {
+            margin: 10px 0px;
             font-size: 36px;
             width: 96px;
             height: 96px;
             text-align: center;
         }
+        .start_btn{
+            height: 64px;
+            font-size: 28px;
+        }
 
-        .btn-primary {}
+        .btn-primary {
+            width: 100%;
+            margin-bottom:  15px;
+        }
+        .entry_btn {
+            margin-bottom: 15px;
+        }
     </style>
 </head>
 
 <body>
-    <div class="container-md">
+    <div class="container-md rounded-3">
         <div class="row justify-content-around">
             <div class="col-12">
-                <h3 style="margin-top: 20px;">Range: 1 - 100</h3>
+                <h3 class="tipDisplay">按下生產數字開始</h3>
                 <div class="input_result">0</div>
-                <button class="btn btn-primary rounded-pill" type="button">Start</button>
+                <button class="btn btn-primary rounded-3 start_btn" type="button">產生數字</button>
             </div>
             <div class="col-4">
                 <button type="button" class="btn btn-dark rounded-circle num_btn">1</button>
@@ -76,28 +91,28 @@
                 <button type="button" class="btn btn-dark rounded-circle num_btn">9</button>
             </div>
             <div class="col-4">
-                <button type="button" class="btn btn-danger rounded-circle num_btn">X</button>
+                <button type="button" class="btn btn-danger rounded-circle del_btn ">X</button>
             </div>
             <div class="col-4">
                 <button type="button" class="btn btn-dark rounded-circle num_btn">0</button>
             </div>
             <div class="col-4">
-                <button type="button" class="btn btn-success rounded-circle num_btn">O</button>
+                <button type="button" class="btn btn-success rounded-circle entry_btn">O</button>
             </div>
         </div>
     </div>
     <script>
-        let displayResult = document.querySelector('.input_result');
-        let pendingValue;
+
+        let h3 = document.querySelector(".tipDisplay h3");
+
+        const startBtn =  document.querySelector(".start_btn");
+
+        startBtn.addEventListener("click", function (event) {
+            h3.innerHTML = `W`;
+        })
 
 
-        let btnText = e.target.innerText;
-        if (displayVal === '0') {
-            displayVal = '';
-        }
-        displayVal += btnText;
-        disPlayresult.innerText = displayVal;
-        }
+
 
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
