--- a/PrimaryNum/index.html
+++ b/PrimaryNum/index.html
@@ -9,150 +9,33 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Hello, Calculator!</title>
     <style>
-        .container-md {
-            background: black;
-            width: 414px !important;
-        }
-
-        .input_result {
-            color: white;
-            font-size: 50px;
-            text-align: center;
+        *{
             overflow: hidden;
-            margin-bottom: 10px;
         }
-
-        .tipDisplay {
-            margin-top: 20px;
-            color: #ddd;
+        iframe.game {
+            position: relative;
+            top: 0px;
+            left: calc(50% - 207px);
+            overflow:hidden;
+            width: 414px;
+            height: 715px;
         }
-
-        button {
-            text-align: center;
-        }
-
-        .btn {
-            margin: 10px 0px;
-            font-size: 36px;
-            width: 96px;
-            height: 96px;
-            text-align: center;
-        }
-
-        .start_btn {
-            height: 64px;
-            font-size: 28px;
-        }
-
-        .btn-primary {
-            width: 100%;
-            margin-bottom: 15px;
-        }
-
-        .entry_btn {
-            margin-bottom: 15px;
+        iframe.youtube {
+            position: absolute;
+            width: 414px;
+            top:0;
+            left: 0;
+            overflow:hidden;
         }
     </style>
 </head>
 
 <body>
-    <div class="container-md rounded-3">
-        <div class="row justify-content-around">
-            <div class="col-12">
-                <h3 class="tipDisplay">按下生產數字開始</h3>
-                <p class="input_result">0</p>
-                <button class="btn btn-primary rounded-3 start_btn" type="button">產生數字</button>
-            </div>
-            <div class="col-4">
-                <button type="button" class="btn btn-dark rounded-circle num_btn">1</button>
-            </div>
-            <div class="col-4">
-                <button type="button" class="btn btn-dark rounded-circle num_btn">2</button>
-            </div>
-            <div class="col-4">
-                <button type="button" class="btn btn-dark rounded-circle num_btn">3</button>
-            </div>
-            <div class="col-4">
-                <button type="button" class="btn btn-dark rounded-circle num_btn">4</button>
-            </div>
-            <div class="col-4">
-                <button type="button" class="btn btn-dark rounded-circle num_btn">5</button>
-            </div>
-            <div class="col-4">
-                <button type="button" class="btn btn-dark rounded-circle num_btn">6</button>
-            </div>
-            <div class="col-4">
-                <button type="button" class="btn btn-dark rounded-circle num_btn">7</button>
-            </div>
-            <div class="col-4">
-                <button type="button" class="btn btn-dark rounded-circle num_btn">8</button>
-            </div>
-            <div class="col-4">
-                <button type="button" class="btn btn-dark rounded-circle num_btn">9</button>
-            </div>
-            <div class="col-4">
-                <button type="button" class="btn btn-danger rounded-circle del_btn ">X</button>
-            </div>
-            <div class="col-4">
-                <button type="button" class="btn btn-dark rounded-circle num_btn">0</button>
-            </div>
-            <div class="col-4">
-                <button type="button" class="btn btn-success rounded-circle entry_btn">O</button>
-            </div>
-        </div>
-    </div>
-    <script>
+    <iframe class="youtube mx-auto"
+        src="https://www.youtube.com/embed/aAyNmCO2Te0?rel=0&autoplay=1&loop=1&playlist=aAyNmCO2Te0&amp;showinfo=0"
+        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-        let h3 = document.querySelector("h3.tipDisplay");
-        let input = document.querySelector("p.input_result");
-        const numBtn = document.querySelectorAll(".num_btn");
-        const delBtn = document.querySelector(".del_btn");
-        const entryBtn = document.querySelector(".entry_btn");
-        const startBtn = document.querySelector(".start_btn");
-
-        startBtn.addEventListener("click", function (event) {
-            numBtn.forEach((x) => {
-            x.addEventListener("click", () => {
-                numBtn.disabled = false;
-                if (input.innerText == 0) {
-                    input.innerText = x.innerText;
-                } else {
-                    input.innerText += x.innerText;
-                }
-            });
-        });
-            let min = 1;
-            let max = 100;
-            let ansIs = Math.floor(Math.random() * max + min);
-            h3.innerText = `Range ${min} - ${max} `;
-            console.log(ansIs);
-            startBtn.disabled = true;
-            delBtn.addEventListener("click", function (event) {
-                input.innerHTML = 0;
-            });
-
-            entryBtn.addEventListener("click", function (event) {
-                if (input.innerText >= max || input.innerText <= min) {
-                    alert("ERROR!");
-                    input.innerText = "0";
-                } else {
-                    if (input.innerText == ansIs) {
-                        alert("SUCCSE!");
-                        h3.innerText = `Range ${input.innerText} - ${input.innerText}`;
-                        location.reload()
-                    } else if (input.innerText < ansIs) {
-                        h3.innerText = `Range ${input.innerText} - ${max}`;
-                        min = input.innerText;
-                        input.innerText = "0";
-                    } else {
-                        h3.innerText = `Range ${min} - ${input.innerText}`;
-                        max = input.innerText;
-                        input.innerText = "0";
-                    }
-                }
-            });
-        });
-    </script>
+    <iframe class="game mx-auto" src="./primary.html"></iframe>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
