--- a/PrimaryNum/primary.html
+++ b/PrimaryNum/primary.html
@@ -7,7 +7,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <title>Hello, Calculator!</title>
+    <title>Hello, Primary Number!</title>
     <style>
         .container-md {
             background: black;
@@ -106,7 +106,7 @@
         let h3 = document.querySelector("h3.tipDisplay");
         let input = document.querySelector("p.input_result");
         let guessTime = 0;
-        
+
         const numBtn = document.querySelectorAll(".num_btn");
         const delBtn = document.querySelector(".del_btn");
         const entryBtn = document.querySelector(".entry_btn");
