--- a/PrimaryNum/index.html
+++ b/PrimaryNum/index.html
@@ -16,14 +16,15 @@
 
         .input_result {
             color: white;
-            font-size: 50px;
+            font-size: 36px;
             text-align: center;
             overflow: hidden;
             margin-bottom: 10px;
         }
 
         .tipDisplay {
-            margin-top: 20px;
+            font-size: 28px;
+            margin-top: 10px;
             color: #ddd;
         }
 
@@ -40,17 +41,18 @@
         }
 
         .start_btn {
-            height: 64px;
+            margin: auto;
+            height: 48px;
             font-size: 28px;
         }
 
         .btn-primary {
             width: 100%;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
 
         .entry_btn {
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
     </style>
 </head>
