--- a/Apple/index.html
+++ b/Apple/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="refresh" content="3;url=https://www.youtube.com/watch?v=JB3INq8n9is" />
+     <!-- <meta http-equiv="refresh" content="3;url=https://www.youtube.com/watch?v=JB3INq8n9is" /> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>宇智波騙你</title>
