--- a/PrimaryNum/index.html
+++ b/PrimaryNum/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap._min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Hello, Primary Number!</title>
     <style>
@@ -126,8 +126,8 @@
             });
             let _min = 1;
             let _max = 100;
-            let ansIs = Math.floor(Math.random() * max + _min);
-            h3.innerText = `Range ${_min} - ${max} `;
+            let ansIs = Math.floor(Math.random() * _max + _min);
+            h3.innerText = `Range ${_min} - ${_max}`;
             console.log(ansIs);
             startBtn.disabled = true;
             delBtn.addEventListener("click", function (event) {
@@ -135,7 +135,7 @@
             });
 
             entryBtn.addEventListener("click", function (event) {
-                if (input.innerText >= max || input.innerText <= _min) {
+                if (input.innerText >= _max || input.innerText <= _min) {
                     alert("ERROR!");
                     input.innerText = "0";
                 } else {
@@ -159,7 +159,7 @@
             });
         });
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle._min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
 </body>
