--- a/PrimaryNum/index.html
+++ b/PrimaryNum/index.html
@@ -11,8 +11,10 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Hello, Primary Number!</title>
     <style>
-        .container-md {
+        body{
             background: black;
+        }
+        .container-md {
             width: 414px !important;
         }
 
@@ -60,7 +62,7 @@
 </head>
 
 <body>
-    <div class="container-md rounded-3">
+    <div class="container-md">
         <div class="row justify-content-around">
             <div class="col-12">
                 <h3 class="tipDisplay">按下生產數字開始</h3>
@@ -119,7 +121,6 @@
         startBtn.addEventListener("click", function (event) {
             numBtn.forEach((x) => {
                 x.addEventListener("click", () => {
-                    numBtn.disabled = false;
                     if (input.innerText == 0) {
                         input.innerText = x.innerText;
                     } else {
