--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -286,6 +286,9 @@
                     input.innerText = 0;
                     multi = 0;
                 }
+                if(input.innerText == 'NaN'){
+                    input.innerText = 0;
+                }
                 if (input.innerText == '0') {
                     input.innerText = x.innerText;
                 } else {
