--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -41,7 +41,7 @@
         }
 
         .history {
-            color: #555;
+            color: limegreen;
             font-size: 24px;
             text-align: right;
             overflow: hidden;
